iptables
# Generated by iptables-save v1.4.7 on Thu Jul 24 19:55:40 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [133:147160]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6060 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9200 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9300 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9990 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9999 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3000 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8090 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Thu Jul 24 19:55:40 2014
